# Ghost-Downloader

./: .gitignore  Dockerfile  app.py  docker-compose.yml  erome_downloader.py  ghost_dl.py  requirements.txt
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: orchestrator.py  query_parser.py  safety.py  scorer.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: analyze.py  preferences.py  search.py
backend/app/scrapers/: base.py  brave.py  erome.py  pornhub.py  redgifs.py  registry.py  shesfreaky.py  stash.py  xhamster.py  xvideos.py
backend/app/services/: cache.py  vector_store.py
backend/app/utils/: logger.py  rate_limit.py
templates/: index.html
web/: next.config.mjs  package-lock.json  package.json  vercel.json
web/app/: globals.css  layout.js  page.js
web/app/api/extract/: route.js
web/app/api/ghost-search/: route.js
web/app/api/proxy/: route.js
